syntax = "proto3";

package g1.protocol;

import "role.proto";
import "common.proto";

// MAIN_GM_GET_ROLE_REQ
message GMGetRoleReq {
}

message GMGetRoleRsp {
    Ret ret = 1;
    RoleInfo role_info = 2;
}

// MAIN_GM_SET_ROLE_REQ
message GMSetRoleReq {
    RoleInfo role_info = 1;
}

message GMSetRoleRsp {
    Ret ret = 1;
}

// MAIN_GM_ADD_ITEM_REQ
message GMAddItemReq {
    int32 id = 1;
    int32 count = 2;
}

message GMAddItemRsp {
    Ret ret = 1;
}